# Aurus

./: .gitignore  README.md  pyproject.toml
.codex/: config.toml  instructions.md
artifacts/: baseline-diagnostics.txt  baseline-events.jsonl  baseline-parameter-sweep.csv  baseline-stress-test.csv  baseline-trade-analysis.csv  baseline-trades.csv  channel-breakout-scan.csv  daily-trend-active-hours.csv  daily-trend-risk-normalized.csv  impulse-hour-analysis.csv  real-data-gap-audit-mt5.csv  real-london-frequency-sweep.csv  structural-setup-scan.csv  structure-portfolio-trades.csv  xauusd_m5_real_contiguous_segments.csv  xauusd_m5_real_gap_report.csv
aurus/: __init__.py
docs/: BACKTEST_SPEC.md  BASELINE_STRATEGY.md  DATA_SPEC.md  DEMO_FORWARD_VALIDATION.md  EXECUTION_SPEC.md  OBSERVABILITY_SPEC.md  PRD.md  RESEARCH_SPEC.md  RISK_SPEC.md  SPECIFICATION.md  STRUCTURAL_RESEARCH_PLAN.md  STRUCTURAL_RESEARCH_RESULTS.md
examples/: baseline_large_sample.csv  baseline_sample_bars.csv  xauusd_m5_real_contiguous.csv
tests/: test_analyze_daily_trend_hours.py  test_analyze_impulse_hours.py  test_analyze_structure_portfolio.py  test_backtest_engine.py  test_baseline_parameter_sweep.py  test_baseline_strategy.py  test_baseline_stress.py  test_cohort_analysis.py  test_daily_trend_strategy.py  test_data_layer.py  test_demo_workflow.py  test_execution_paper.py  test_gap_audit.py  test_imports.py  test_mt5_export.py  test_ops.py  test_paper_forward.py  test_real_data_ingestion.py  test_risk_kernel.py  test_risk_normalized_daily_trend.py  test_run_baseline_entrypoint.py  (+5 more)
(+75 files in other folders)
